--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,10 +31,10 @@
       <a href="https://freelanceinbox.com"><img src="/images/logo.png"></a>
 
       <ul>
-        <li><a href="#">Blog</a></li>
+        <li><a href="/">Blog</a></li>
         <li><a href="#">Archives</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="mailto:support@freelanceinbox.com">Contact</a></li>
     </div>
   </div>
   
