--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -27,18 +27,14 @@ a {
 .nmargin { margin:0; }
 .lmargin { margin-left:40px; }
 .rmargin { margin-right:40px; }
+.rounded { border-radius:5px; }
 
 .header {
 	width:100%;
-	border-top:5px solid $orange;
-
-	.gray-bar {
-		height:20px;
-		background:url(/images/brushed.png);
-	}
+	border-top:2px solid $orange;
 
 	.nav {
-		margin:10px 50px;
+		padding: 10px 50px 20px;
 		img {
 			margin-top:20px;
 			float:left;
@@ -82,8 +78,8 @@ a {
 }
 
 .post {
-	margin:60px auto;
-	max-width:600px;
+	margin:50px auto;
+	max-width:650px;
 	padding:5px;
 	
 	h1 {
@@ -102,6 +98,13 @@ a {
 		}
 	}
 
+	h3 {
+		margin-top:40px;
+		font-family:$ptSans;
+		font-size:2.0em;
+		font-weight:700;
+	}
+
 	font-size:1.5em;
 
 	a {
@@ -117,6 +120,65 @@ a {
 		max-width:100%;
 		margin-left:auto;
 		margin-right:auto;
+	}
+
+	blockquote {
+		border-color:$orange;
+		font-style:italic;
+	}
+}
+
+.grid {
+	width:960px;
+	/*min-width:700px;*/
+	/*width:100%;*/
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.inset {
+	padding:10px;
+	background:url(/images/sos.png);
+	border-top:1px solid #ccc;
+	border-bottom:1px solid #ccc;
+}
+
+.featured {
+	h3 {
+		font-family:$ptSans;
+	}
+	.card {
+		float:left;
+		width:46%;
+		margin:2% 4% 2% 0;
+		&:nth-child(odd) {
+			margin-right:0;
+		}
+		padding:30px;
+		height:450px;
+		overflow:hidden;
+		background:#fff;
+		box-shadow: 0px 0px 5px rgba(0,0,0,.3);
+		-webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.3);
+		.img-wrapper {
+			height:170px;
+			overflow:hidden;
+			margin:-30px;
+			margin-bottom:25px;
+			background: rgba(0,0,0,.1);
+			img {
+				width:100%;
+				margin-top:-20%;
+			}
+		}
+		h3 {
+			font-family:$ptSans;
+		}
+
+		&:hover {
+			text-decoration:none;
+			color:#000;
+		};
 	}
 
 }
