--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,12 @@
 
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/css/normalize.css" />
+   <link rel="stylesheet" href="/css/prism.css" />
    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+   
    <link rel="stylesheet" href="/css/screen.css" />
-
-
-  <link href='https://fonts.googleapis.com/css?family=Cardo:400,400italic,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Cardo:400,400italic,700' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
 
 
    <!-- Typekit -
@@ -24,33 +24,29 @@
 
 <div class="site">
 
-  <div class="header">
-    <div class="gray-bar"></div>
-
-    <div class="nav">
-      <a href="https://freelanceinbox.com"><img src="/images/logo.png"></a>
-
-      <ul>
-        <li><a href="/">Blog</a></li>
-        <li><a href="#">Archives</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="mailto:support@freelanceinbox.com">Contact</a></li>
-    </div>
-  </div>
+  {% include header.html %}
   
   <div class="post">
     {{ content }}
+    <div id="disqus_thread"></div>
   </div>
   
-  <div class="footer">
-    <div class="copyright pull-left">©2014 FreelanceInbox.com. Live free.</div>
+  {% include footer.html %}
 
-    <a class="twitter pull-right" href="http://twitter.com/freelanceinbox">
-      <img src="https://cdn1.iconfinder.com/data/icons/simple-icons/32/twitter-32-black.png">
-      <span>Follow Us</span>
-    </a>
-  </div>
 </div>
+
+
+<script src="/js/prism.js"></script>
+
+<script type="text/javascript">
+    var disqus_shortname = 'freelanceinbox'; // required: replace example with your forum shortname
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
 
 </body>
 </html>
