Fixed footer and header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
-<div class="footer">
-	<div class="copyright calign">©2014 FreelanceInbox.com. Live free.</div>
-
-	<a class="twitter pull-right" href="http://twitter.com/freelanceinbox">
-		<img src="https://cdn1.iconfinder.com/data/icons/simple-icons/32/twitter-32-black.png">
-		<span>Follow Us</span>
-	</a>
-</div>
+<footer>
+	<div class="grid tmargin bmargin">
+		<p class="calign">Questions? Contact us at <a href="mailto:support@freelanceinbox.com" class="t-orange">support@freelanceinbox.com</a></p>
+		<p class="calign t-gray tmargin copyright">©2014 FreelanceInbox.com. Live free.</p>
+	</div>
+</footer>
