--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 			<li><a href="https://freelanceinbox.com">Home</a></li>
 			<li><a href="/">Blog</a></li>
 			<li><a href="https://freelanceinbox.com/job/new">Post a job</a></li>
-			<li><a href="https://freelanceinbox.com/jobs">Job Board</a></li>
+			<!-- <li><a href="https://freelanceinbox.com/jobs">Job Board</a></li> -->
 			<li><a href="mailto:support@freelanceinbox.com">Contact</a></li>
 		</ul>
 	</div>
