--- a/css/screen.css
+++ b/css/screen.css
@@ -57,19 +57,26 @@ a {
           font-family: "PT Sans Narrow";
           text-transform: uppercase; }
 
-.footer {
-  width: 100%;
-  height: 150px;
-  background: url(/images/brushed.png);
-  padding: 40px;
-  font-family: "PT Sans Narrow"; }
-  .footer a {
-    transition: all .5s;
-    -webkit-transition: all .5s; }
-    .footer a:hover {
-      opacity: .7;
-      color: #000; }
+footer p {
+  font-size: 1.5em; }
+footer .copyright {
+  font-size: 1.0em; }
 
+/*.footer {
+	width:100%;
+	height: 150px;
+	background:url(/images/brushed.png);
+	padding:40px;
+	font-family: $ptSans;
+	a {
+		transition: all .5s;
+		-webkit-transition: all .5s;
+		&:hover {
+			opacity:.7;
+			color:#000;
+		};
+	}
+}*/
 .post {
   margin: 50px auto;
   max-width: 650px;
