--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -61,7 +61,15 @@ a {
 	}
 }
 
-.footer {
+footer {
+	p {
+		font-size:1.5em;
+	} 
+	.copyright {
+		font-size:1.0em;
+	}
+}
+/*.footer {
 	width:100%;
 	height: 150px;
 	background:url(/images/brushed.png);
@@ -75,7 +83,7 @@ a {
 			color:#000;
 		};
 	}
-}
+}*/
 
 .post {
 	margin:50px auto;
