--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 		<ul>
 			<li><a href="https://freelanceinbox.com">Home</a></li>
 			<li><a href="/">Blog</a></li>
-			<li><a href="https://freelanceinbox.com/job/new">Post a job</a></li>
+			<li><a href="https://freelanceinbox.com/job">Post a job</a></li>
 			<!-- <li><a href="https://freelanceinbox.com/jobs">Job Board</a></li> -->
 			<li><a href="mailto:support@freelanceinbox.com">Contact</a></li>
 		</ul>
