Updated to match new branding

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <div class="header">
 	<div class="nav">
-		<a href="https://freelanceinbox.com"><img src="/images/logo.png"></a>
+		<a href="https://freelanceinbox.com"><img src="/images/logo_500.png"></a>
 
 		<ul>
-			<li><a href="https://freelanceinbox.com">Home</a></li>
+			<li><a href="https://freelanceinbox.com">Get Leads</a></li>
 			<li><a href="/">Blog</a></li>
-			<li><a href="https://freelanceinbox.com/job">Post a job</a></li>
+			<!-- <li><a href="https://freelanceinbox.com/job">Post a job</a></li> -->
 			<!-- <li><a href="https://freelanceinbox.com/jobs">Job Board</a></li> -->
 			<li><a href="mailto:support@freelanceinbox.com">Contact</a></li>
 		</ul>
