--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
    <link rel="stylesheet" href="/css/screen.css" />
 
 
-  <link href='https://fonts.googleapis.com/css?family=Cardo:400,400italic,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 
    <!-- Typekit -
    <script type="text/javascript" src="//use.typekit.net/laq3zaf.js"></script>
