--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -1,25 +1,27 @@
-$orange: #F34C0B;
+$orange: #F26653;
 $red: #C02020;
-$gray: #666;
-$ptSans: 'PT Sans Narrow';
-
+$gray: #75738E;
+$dark: #211D4A;
 
 body {
 	padding:0;
 	margin:0;
 	font-size:14px;
-	font-family: 'Cardo', serif;
+	font-family: 'Lato', sans-serif;
+	color:$dark;
 }
 
 a {
 	color:#000;
 	&:hover {
-		
+		text-decoration:none;	
 	}
 }
 
 .t-orange { color:$orange; }
 .t-gray { color:$gray; }
+.t-white { color:#fff}
+.t-shadow { text-shadow:0 1px 2px $gray; }
 
 .calign { text-align: center; }
 .bmargin { margin-bottom:40px; }
@@ -48,10 +50,11 @@ a {
 			margin-top:25px;
 			li {
 				a {
-					color:$gray;
+					color:$dark;
 					font-size:1em;
-					font-family:$ptSans;
-					text-transform:uppercase;
+					&:hover {
+						color:$orange;
+					};
 				}
 
 				margin-left:20px;
@@ -74,7 +77,6 @@ footer {
 	height: 150px;
 	background:url(/images/brushed.png);
 	padding:40px;
-	font-family: $ptSans;
 	a {
 		transition: all .5s;
 		-webkit-transition: all .5s;
@@ -91,14 +93,12 @@ footer {
 	padding:5px;
 	
 	h1 {
-		font-family:$ptSans;
-		font-size:3.5em;
+		font-size:3.0em;
 		font-weight:700;
 	}
 
 	h2 {
 		margin-top:40px;
-		font-family:$ptSans;
 		font-size:2.5em;
 		&.subtitle {
 			margin-top:-10px;
@@ -108,7 +108,6 @@ footer {
 
 	h3 {
 		margin-top:40px;
-		font-family:$ptSans;
 		font-size:2.0em;
 		font-weight:700;
 	}
@@ -136,7 +135,6 @@ footer {
 	}
 
 	.bio {
-		font-family:$ptSans;
 		margin:50px 0 50px 0;
 		height:80px;
 		background:rgba(0,0,0,.04);
@@ -155,7 +153,6 @@ footer {
 	}
 
 	.tweet {
-		font-family:$ptSans;
 		iframe {
 			margin-left:auto !important;
 			margin-right:auto !important;
@@ -165,23 +162,18 @@ footer {
 
 .grid {
 	width:960px;
-	/*min-width:700px;*/
-	/*width:100%;*/
 	margin-left:auto;
 	margin-right:auto;
 }
 
 .inset {
 	padding:10px;
-	background:url(/images/sos.png);
-	border-top:1px solid #ccc;
-	border-bottom:1px solid #ccc;
+	background:url(/images/sos_dark.png);
+	border-top:1px solid $gray;
+	border-bottom:1px solid $gray;
 }
 
 .featured {
-	h3 {
-		font-family:$ptSans;
-	}
 	.card {
 		float:left;
 		width:48%;
@@ -192,7 +184,7 @@ footer {
 		padding:30px;
 		height:450px;
 		overflow:hidden;
-		background:#fff;
+		background:rgba(255,255,255,.8);
 		box-shadow: 0px 0px 5px rgba(0,0,0,.3);
 		-webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.3);
 		.img-wrapper {
@@ -205,9 +197,6 @@ footer {
 				width:100%;
 				margin-top:-20%;
 			}
-		}
-		h3 {
-			font-family:$ptSans;
 		}
 
 		&:hover {
